# MLX5W1T1

./: .env  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
EDA/: Untitled.ipynb  askar_eda.ipynb  kaleb2.ipynb  kaleb_eda.ipynb
EDA/preparation/: dates.ipynb
app/: main.py  predict.py  preprocess.py
app/models/: word2vec.txt
dev/: word2vec_k.ipynb
etl/: .env.example  Dockerfile  README.md  docker-compose.yml
etl/docker/: .env.example  Dockerfile  docker-compose.yml
etl/init_db/: setup_db.sql
etl/sql/: create_joined_data.sql  denormalized_query.sql  denormalized_rolling_query.sql  extract_hackernews_items.sql  extract_items.sql  extract_users.sql  transform_temporal_features.sql
etl/sql/origin/: hacker_news_items_schema.csv  hacker_news_tables.csv  hacker_news_users_schema.csv
etl/src/: clean_db.py  extract_and_load.py  run_etl.py  text_feature_engineering.py  transform_user_features.py
etl/titles/: download_titles.py
models/: k_word2vec.ipynb  k_word2vec2.ipynb
models/askar_experimental/: new.ipynb  word2vec.py  word2vec_training.ipynb
predictor/: README.md
predictor/data/: fetch.py  int_to_vocab.pkl  save.py  vocab_to_int.pkl
predictor/model/: predictor.py  train.py  validate.py  zfc2l3j9jzi8m2
results/: k_res.txt
sql/: denormalized_rolling_query.sql
src/: best.py  best_batches.py  message.py  prep_data.py  prepare_text8dataset.py  test.py  ultra.py  validate.py  word2vec.py
templates/: index.html  result.html
word2vec/: evaluator.py  finetune.py  tokenizer.py  word2vec.py
word2vec/askar/: novel.ipynb  playing.ipynb
