[tool.poetry]
name = "mlx5w1t1"
version = "0.1.0"
description = ""
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.0.0" 
ipykernel = "^6.29.0" 
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
polars = "^1.9.0"
connectorx = "^0.3.3"
matplotlib = "^3.9.2"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
nltk = "^3.9.1"
spacy = "3.7"
gensim = "^4.3.3"
torch = "^2.4.1"
tqdm = "^4.66.5"
more-itertools = "^10.5.0"
wandb = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
