[tool.poetry]
name = "mlx5w1t1"
version = "0.1.0"
description = ""
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.0.0" 
ipykernel = "^6.29.0" 
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
polars = "^1.9.0"
connectorx = "^0.3.3"
matplotlib = "^3.9.2"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
datasets = "3.0.0"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
